Version 1.14 - 2017-11-09
* BUG#5374 Consistency between contrat dates getter and the searcher function of these last
* BUG#5980 Add functions to rule engine to get the status and the final end date of a contract
* BUG#7374 Add index on contract product
* FEA#7024 Configure default reports templates to be added as default letters in coog
* BUG#6468 Use manual_start_date if defined on a covered element to calculate option start_date
* FEA#7122 Add default quote number sequence on offered configuration
* FEA#7002 Display the contract's icon in its form view
* BUG#6993 Removing simple json import
* BUG#6870 Use party's main address instead of searching for to date active address in contract's contact
* BUG#6748 Possibility to clear the termination reason when reactivating a contract
* BUG#6616 Allow termination in previous activation period

Version 1.12 - 2017-04-28
* FEA#0000 Add Contract Notifications
* FEA#0000 Add chains for decline inactive quotes and terminate contract batches
* FEA#0000 Allow to filter by initial start date

Version 1.10 - 2016-11-02
* FEA#0000 Display contract status in color in form view according to its value

Version 1.8 - 2016-07-06
* FEA#0000 Batch to automatically decline quotes exceeding a delay of inactivity
* FEA#0000 Add order methods on start_date, end_date and rec_name for contract list view sorting
* FEA#0000 Add distinct quote entry point
* FEA#0000 Allow to initialize contacts and check their consistency

Version 1.6 - 2015-12-23
* FEA#0000 Add contract field on event logs
* FEA#0000 Display contract in different colors in tree view according to state.
* FEA#0000 Add contract icon on tree view

Version 1.5 - 2015-09-24
* FEA#0000 Add cache on contract.sub_status
* FEA#0000 Add contract.option.version and move extra_data in contract module
* FEA#0000 Voiding a contract preserves initial_start_date and activation_history
* FEA#0000 Add sub_status to option

Version 1.4 - 2015-05-29