@@ -1,3 +1,5 @@
+* BUG#1824 Nettoyage des données versionnées lorsque la date de fin du contrat change
+
 Version 1.14 - 2017-11-09
 * BUG#5374 Cohérence entre la fonction de récupération des dates de contrat et des fonctions de recherche sur ces dernières
 * BUG#5980 Ajout de fonctions dans le moteur de règle pour récuperer le statut et la date finale de fin du contrat
