@@ -1,3 +1,5 @@
+* BUG#1824 Clean versioned data when changing a contract's end date
+
 Version 1.14 - 2017-11-09
 * BUG#5374 Consistency between contrat dates getter and the searcher function of these last
 * BUG#5980 Add functions to rule engine to get the status and the final end date of a contract
